# service-to-signal

./: .gitignore  .gitmodules  README.md  service-to-signal-compose.yaml
.cargo/: config.toml
components/: Cargo.toml  Dockerfile.horn-client  Dockerfile.horn-service  Dockerfile.software-horn  Dockerfile.vehicle-gateway
components/actuator-provider/: CMakeLists.txt  README.md  platformio.ini
components/actuator-provider/src/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c
components/horn-client/: Cargo.toml  README.md  zenoh-config.json5
components/horn-client/src/: main.rs
components/horn-proto/: Cargo.toml  README.md  build.rs
components/horn-proto/src/: lib.rs
components/horn-service-kuksa/: Cargo.toml  README.md
components/horn-service-kuksa/src/: config.rs  connections.rs  main.rs  request_handler.rs  request_processor.rs
components/software-horn/: Cargo.toml  README.md
components/software-horn/src/: main.rs
components/vehicle-gateway/: Cargo.toml
components/vehicle-gateway/src/: config.rs  gateway.rs  main.rs
config/: horn-service-zenoh-config.json5  mosquitto.config  provider-config.json5  router-config.json5  software-horn-config.json5  software-horn-zenoh-config.json5  vehicle-gateway-zenoh-config.json5  zenoh-kuksa-provider-config.json5
config/ustreamer-config/: CONFIG.json5  MQTT_CONFIG.json5  ZENOH_CONFIG_1.json5  ZENOH_CONFIG_2.json5  point_to_point.json
