#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[workspace]
members = ["horn-client", "horn-proto", "horn-service-kuksa", "software-horn"]
resolver = "2"

[workspace.package]
license = "EPL-2.0"
readme = "../README.md"
version = "0.1.0-SNAPSHOT"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5.18", features = ["derive", "env"] }
horn-proto = { path = "horn-proto" }
log = { version = "0.4.22"}
env_logger = { version = "0.11.5" }
protobuf = { version = "3.5.0" }
tokio = { version = "1.40.0" }
up-rust = "0.2.0"
up-transport-zenoh = "0.2.0"


zenoh-buffers =  { version = "=1.0.0-beta.3" }
zenoh-codec = { version = "=1.0.0-beta.3"}
zenoh-collections = { version =  "=1.0.0-beta.3"}
zenoh-config = {version = "=1.0.0-beta.3"}
zenoh-core =  {version = "=1.0.0-beta.3"}
zenoh-keyexpr = {version = "=1.0.0-beta.3"}
zenoh-link = {version = "=1.0.0-beta.3"}
zenoh-macros = { version =  "=1.0.0-beta.3"}
zenoh-plugin-trait = { version = "=1.0.0-beta.3"}
zenoh-protocol = { version = "=1.0.0-beta.3"}
zenoh-result = { version = "=1.0.0-beta.3"}
zenoh-runtime = { version = "=1.0.0-beta.3"}
zenoh-sync = {version = "=1.0.0-beta.3"}
zenoh-task = { version = "=1.0.0-beta.3" }
zenoh-transport = { version = "=1.0.0-beta.3"}
zenoh-util = { version =  "=1.0.0-beta.3"}

# not using up-rust 0.2.0 here because, up-transport-zenoh expects up-rust 0.1.5