#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[workspace]
members = [
    "horn-client",
    "horn-proto",
    "horn-service-kuksa",
    "software-horn",
    "vehicle-gateway",
]
resolver = "2"

[workspace.package]
license = "EPL-2.0"
readme = "../README.md"
version = "0.1.0-SNAPSHOT"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5.18", features = ["derive", "env"] }
horn-proto = { path = "horn-proto" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.5" }
protobuf = { version = "3.5.0" }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
up-rust = { version = "0.4.0" }
up-transport-zenoh = { version = "0.5.0" }
up-transport-mqtt5 = { git = "https://github.com/eclipse-uprotocol/up-client-mqtt5-rust", branch = "main" }
