#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[package]
name = "horn-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
horn-proto = { workspace = true }
log = { workspace = true }
paho-mqtt = "0.13.1"
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
up-transport-mqtt5 = { workspace = true }
