#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[package]
name = "horn-proto"
version = "0.1.0"
description = "Project to build protobuf definitions for COVESA uService Horn"
edition = "2021"

[dependencies]
protobuf = { workspace = true } 

[build-dependencies]
protoc-bin-vendored = { version = "3.0" }
protobuf-codegen = { version = "3.5.0" }
