#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[package]
name = "horn-service-kuksa"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
horn-proto = { workspace = true }
kuksa-rust-sdk = "0.1.2"
log = { workspace = true }
env_logger = { workspace = true }
prost-types = { version = "0.12.6" }
protobuf = { workspace = true }
tokio = { workspace = true }
up-rust = { workspace = true }
up-transport-zenoh = { workspace = true }
# use http version as in kuksa-rust-sdk
http = "0.2.12"
